force-app/main/default/objects/Article_Quality__c/fields/Action_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Action_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coaching Provided By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Articles_Quality3</relationshipName>
    <type>Lookup</type>
</CustomField>