force-app/main/default/objects/Article_Quality__c/fields/Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Action_Date__c</fullName>
    <label>Date Coaching Completed</label>
    <type>Date</type>
</CustomField>