force-app/main/default/objects/Article_Quality__c/fields/Action_Needed__c.field-meta.xml
<CustomField>
    <fullName>Action_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coaching Needed</label>
    <type>Checkbox</type>
</CustomField>