force-app/main/default/objects/Article_Quality__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Article Contributor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Articles_Quality</relationshipName>
    <type>Lookup</type>
</CustomField>