force-app/main/default/objects/Article_Quality__c/fields/AQ_Score__c.field-meta.xml
<CustomField>
    <fullName>AQ_Score__c</fullName>
    <label>CSC Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>