force-app/main/default/objects/Article_Quality__c/fields/Art_Meets_Content_Standard__c.field-meta.xml
<CustomField>
    <fullName>Art_Meets_Content_Standard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Article meets content standard(Obsolete)</label>
    <type>Checkbox</type>
</CustomField>