force-app/main/default/objects/Article_Quality__c/fields/Article_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Article_Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Article Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Article_Quality_Index</relationshipName>
    <type>Lookup</type>
</CustomField>