force-app/main/default/objects/Article_Quality__c/fields/Article_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Article_Created_Date__c</fullName>
    <label>Article Version Created Date</label>
    <type>DateTime</type>
</CustomField>