force-app/main/default/objects/Article_Quality__c/fields/Article_Number__c.field-meta.xml
<CustomField>
    <fullName>Article_Number__c</fullName>
    <label>Article Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>