force-app/main/default/objects/Article_Quality__c/fields/Article_Type__c.field-meta.xml
<CustomField>
    <fullName>Article_Type__c</fullName>
    <label>Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>