force-app/main/default/objects/Article_Quality__c/fields/Article_Unique__c.field-meta.xml
<CustomField>
    <fullName>Article_Unique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Article Unique?</label>
    <type>Checkbox</type>
</CustomField>