force-app/main/default/objects/Article_Quality__c/fields/Article_Version__c.field-meta.xml
<CustomField>
    <fullName>Article_Version__c</fullName>
    <label>Article Version</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>