force-app/main/default/objects/Article_Quality__c/fields/ArticleFirstPublishedDate__c.field-meta.xml
<CustomField>
    <fullName>ArticleFirstPublishedDate__c</fullName>
    <description>Article First Published Date</description>
    <label>Article First Published Date</label>
    <type>DateTime</type>
</CustomField>