force-app/main/default/objects/Article_Quality__c/fields/Content_Complete__c.field-meta.xml
<CustomField>
    <fullName>Content_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Content complete?</label>
    <type>Checkbox</type>
</CustomField>