force-app/main/default/objects/Article_Quality__c/fields/Content_Understandable__c.field-meta.xml
<CustomField>
    <fullName>Content_Understandable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is the Content Clear?</label>
    <type>Checkbox</type>
</CustomField>