force-app/main/default/objects/Article_Quality__c/fields/Custom_Question_3__c.field-meta.xml
<CustomField>
    <fullName>Custom_Question_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Question 3</label>
    <type>Checkbox</type>
</CustomField>