force-app/main/default/objects/Article_Quality__c/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <label>Coaching Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>