force-app/main/default/objects/Article_Quality__c/fields/Knowledge_Article_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Article_Version_Id__c</fullName>
    <label>Knowledge Article Version</label>
    <length>18</length>
    <type>Text</type>
</CustomField>