force-app/main/default/objects/Article_Quality__c/fields/Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Article Last Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Articles_Quality2</relationshipName>
    <type>Lookup</type>
</CustomField>