force-app/main/default/objects/Article_Quality__c/fields/Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date__c</fullName>
    <label>Article Last Modified Date</label>
    <type>DateTime</type>
</CustomField>