force-app/main/default/objects/Article_Quality__c/fields/Last_Published_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Published_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Article Last Published By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Articles_Quality1</relationshipName>
    <type>Lookup</type>
</CustomField>