force-app/main/default/objects/Article_Quality__c/fields/Last_Published_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Published_Date__c</fullName>
    <label>Article Last Published Date</label>
    <type>DateTime</type>
</CustomField>