force-app/main/default/objects/Article_Quality__c/fields/Links_In_Article_Valid__c.field-meta.xml
<CustomField>
    <fullName>Links_In_Article_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Links in article valid?</label>
    <type>Checkbox</type>
</CustomField>