force-app/main/default/objects/Article_Quality__c/fields/MigratedFromTool__c.field-meta.xml
<CustomField>
    <fullName>MigratedFromTool__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This boolean will show if the lightning aqi was created from the tool or not.</description>
    <label>MigratedFromTool</label>
    <type>Checkbox</type>
</CustomField>