force-app/main/default/objects/Article_Quality__c/fields/OldAQIId__c.field-meta.xml
<CustomField>
    <fullName>OldAQIId__c</fullName>
    <label>OldAQIId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>