force-app/main/default/objects/Article_Quality__c/fields/Possible_Points__c.field-meta.xml
<CustomField>
    <fullName>Possible_Points__c</fullName>
    <label>Possible Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>