force-app/main/default/objects/Article_Quality__c/fields/Properties_Set_Appropriately__c.field-meta.xml
<CustomField>
    <fullName>Properties_Set_Appropriately__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is the Metadata Correct?</label>
    <type>Checkbox</type>
</CustomField>