force-app/main/default/objects/Article_Quality__c/fields/Title_Accurate__c.field-meta.xml
<CustomField>
    <fullName>Title_Accurate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does the Title Relate to Article?</label>
    <type>Checkbox</type>
</CustomField>