force-app/main/default/objects/Article_Quality__c/validationRules/Agent_field_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Agent_field_is_required</fullName>
    <active>true</active>
    <description>Agent field is required</description>
    <errorConditionFormula>ISBLANK( Agent__c   )</errorConditionFormula>
    <errorDisplayField>Agent__c</errorDisplayField>
    <errorMessage>You must  specify an Article Contributor</errorMessage>
</ValidationRule>