force-app/main/default/objects/Article_Quality__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Knowledge_Article_Version_Id__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Agent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>